--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -12,6 +12,7 @@
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-lg"></i></button>
             <ul class="nav-list">
                 <li><a href="../inmo">HOME</a></li>
+                <li><a href="../alquilertemporario">ALQUILER TEMPORARIO</a></li>
                 <li><a href="../alquiler">ALQUILER</a></li>
                 <li><a href="../venta">VENTA</a></li>
                 <li><a href="../nosotros">NOSOTROS</a></li>
