Agregué vista Alquiler Temp

--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -47,6 +47,7 @@
                       <select id="contrato" name="contrato" required>
                         <option value="">Seleccione una opción</option>
                         <option value="1">Alquiler</option>
+                        <option value="3">Alquiler (temporario)</option>
                         <option value="2">Venta</option>
                         <!-- <option value="3">Alq. Temp.</option> -->
                       </select>
