--- a/views/editarusuario.ejs
+++ b/views/editarusuario.ejs
@@ -19,16 +19,16 @@
     
         <form>
             <label for="name">Nombre completo:</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" name="name" value="<%= usuario.nombre %>" required>
           
             <label for="email">Correo electrónico:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" value="<%= usuario.email %>"  required>
           
             <label for="old-password">Contraseña anterior:</label>
             <input type="password" id="old-password" name="old-password" required>
           
             <label for="new-password">Nueva contraseña:</label>
-            <input type="password" id="new-password" name="new-password" minlength="10" required>
+            <input type="password" id="new-password" name="new-password" minlength="10"  required>
             <small>La contraseña debe tener al menos 10 caracteres y contener al menos dos números.</small>
           
             <label for="confirm-password">Confirmar nueva contraseña:</label>
